--- a/mlvc_exercise_1/ML_Exercise1.ipynb
+++ b/mlvc_exercise_1/ML_Exercise1.ipynb
@@ -46,7 +46,7 @@
      "output_type": "stream",
      "text": [
       "Enabling notebook extension jupyter-js-widgets/extension...\n",
-      "      - Validating: \u001b[32mOK\u001b[0m\n"
+      "      - Validating: \u001B[32mOK\u001B[0m\n"
      ]
     }
    ],
